# llama.cpp

./: .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  pseudo-colored-output.txt  pyproject.toml  token_probs.json
common/: arg.cpp
dev-superlinear/: config.yaml  model_instructions.md  run.py  run_all_models.sh
dev-superlinear/docs/: make_guide.md  model_setup.md  run_guide.md
docs-superlinear/: README.md  external-api-rng.md  model_setup.md  run_guide.md
examples/: CMakeLists.txt
examples/parallel/: parallel.cpp
examples/rng-test/: rng_test.cpp
examples/run/: run.cpp
include/: llama.h
runs/run_20250709_022741/: log.txt  output.txt  rng_values.txt
runs/run_20250709_023322/: log.txt  output.txt  rng_values.txt
runs/run_20250709_023430/: log.txt  output.txt  rng_values.txt
runs/run_20250709_031300/: log.txt  output.txt  rng_values.txt
runs/run_20250709_034020/: log.txt  output.txt  rng_values.txt
runs/run_20250709_035518/: log.txt  output.txt  rng_values.txt
runs/run_20250709_035957/: log.txt  output.txt  rng_values.txt
src/: CMakeLists.txt  llama-rng-provider.cpp  llama-rng-provider.h  llama-sampling.cpp
superlinear/: logs.txt  prompts.txt  results.txt  run_benchmark.py  run_benchmark_old.py  test_prompts.txt
tools-superlinear/: README.md  process_json_tokens.py  run_example.sh  token_probability_visualizer.py
tools-superlinear/rng-provider/: rng_service.py
tools-superlinear/rng_provider/: README.md  check_fpga_distribution.py  check_signal_autodetect.py  check_signal_hardcoded_port.py  debug_serial.py  rng_service.py  run.sh  todo.md  (+6 more)
(+42 files in other folders)
